# memex

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  install.sh
.github/workflows/: release.yml
docs/: blueprint-standard.md
examples/: memex.example.toml
src/: config.rs  db.rs  git.rs  hooks.rs  indexer.rs  lib.rs  links.rs  main.rs  refresh.rs
src/commands/: agent_instructions.rs  broken_refs.rs  delete.rs  diff.rs  doctor.rs  edit.rs  example_config.rs  hook_advice.rs  list.rs  mod.rs  move_.rs  read.rs  rebuild_index.rs  search.rs  sync.rs  versions.rs  write.rs
tests/: commands.rs  config.rs  db.rs  hooks.rs  links.rs
tests/common/: mod.rs
